--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,5 +5,19 @@
   <%= @product.name %>
 </p>
 
+<p>
+  <strong>Vendors:</strong>
+  <%= @product.vendors.eacch do |vendor| %>
+    <%= @product.product_vendors.eacch do |product_vendor| %>
+    <tr>
+      <td><%= vendor.name %></td>
+      <td><%= product_vendor.price %></td>
+      <td> | </td>
+    <%end%>
+    <%end%>
+    </tr>
+
+</p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
